Warning issues fixed

--- a/WindowsServerDocs/remote/remote-desktop-services/clients/remote-desktop-client-faq.yml
+++ b/WindowsServerDocs/remote/remote-desktop-services/clients/remote-desktop-client-faq.yml
@@ -17,9 +17,9 @@ summary: |
   Now that you've set up the Remote Desktop client on your device (Android, Mac, iOS, or Windows), you may have questions. Here are answers to the most commonly asked questions about the Remote Desktop clients.
   
   - [Setting up](#setting-up)
-  - [Connections, gateway, and networks](#connection--gateway--and-networks)
+  - [Connections, gateway, and networks](#connection,-gateway,-and-networks)
   - [Web client](#web-client)
-  - [Monitors, audio, and mouse](#monitors--audio--and-mouse)
+  - [Monitors, audio, and mouse](#monitors,-audio,-and-mouse)
   - [Mac hardware](#mac-client---hardware-questions)
   - [Specific error messages](#specific-errors)
   
