--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -42,14 +42,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "Windows Recovery Environment explained"
+          url: https://techcommunity.microsoft.com/t5/windows-it-pro-blog/windows-recovery-environment-explained/ba-p/2273533#M2606
+          itemType: whats-new
         - text: "Microsoft to use SHA-2 exclusively starting May 9, 2021"
           url: https://aka.ms/blog/SHA2
           itemType: whats-new
         - text: "Take action: April 2021 security update available for all supported versions of Windows"
           url: https://support.microsoft.com/help/5001330
-          itemType: whats-new
-        - text: "Reminder: End of service for Windows 10, version 1909 and others - May 11, 2020"
-          url: https://docs.microsoft.com/windows/release-information/windows-message-center#1585
           itemType: whats-new
 
       footerLink:
