--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -42,14 +42,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "April 2021 Windows non-security preview \"C\" release is available for some versions for Windows 10"
+          url: https://support.microsoft.com/help/5001396
+          itemType: whats-new
+        - text: "Group configuration: news and interests on the Windows taskbar "
+          url: https://techcommunity.microsoft.com/t5/windows-it-pro-blog/group-configuration-news-and-interests-on-the-windows-taskbar/ba-p/2281005
+          itemType: whats-new
         - text: "Windows Recovery Environment explained"
           url: https://techcommunity.microsoft.com/t5/windows-it-pro-blog/windows-recovery-environment-explained/ba-p/2273533#M2606
-          itemType: whats-new
-        - text: "Microsoft to use SHA-2 exclusively starting May 9, 2021"
-          url: https://aka.ms/blog/SHA2
-          itemType: whats-new
-        - text: "Take action: April 2021 security update available for all supported versions of Windows"
-          url: https://support.microsoft.com/help/5001330
           itemType: whats-new
 
       footerLink:
