--- a/WindowsServerDocs/storage/storage-migration-service/faq.yml
+++ b/WindowsServerDocs/storage/storage-migration-service/faq.yml
@@ -187,7 +187,7 @@ sections:
         answer: |
           A destination server may contain certificates - issued prior to cutover - in its local certificate store, with the name of the server being part of the subject, subject alternative name, or other fields. When cutover occurs and the server is renamed, these certificates are not updated. You must reissue certificates to your newly renamed servers using your current deployment methods, such as Group Policy or web enrollment.    
 
-      - question: <a name="give-feedback"></a> What are my options to give feedback, file bugs, or get support?
+      - question: What are my options to give feedback, file bugs, or get support?
         answer: |
           To give feedback on the Storage Migration Service:
           
