--- a/WindowsServerDocs/storage/storage-replica/storage-replica-frequently-asked-questions.yml
+++ b/WindowsServerDocs/storage/storage-replica/storage-replica-frequently-asked-questions.yml
@@ -42,7 +42,7 @@ sections:
           How do I see the progress of replication during initial sync?
         answer: |
 
-          The Event 1237 messages shown in the Storage Replica Admin even log on the destination server show number of bytes copied and bytes remaining every 10 seconds. You can also use the Storage Replica performance counter on the destination showing **%5CStorage Replica Statistics%5CTotal Bytes Received** for one or more replicated volumes. You can also query the replication group using Windows PowerShell. For instance,  this sample command gets the name of the groups on the destination  then queries one group named **Replication 2** every 10 seconds to show progress:
+          The Event 1237 messages shown in the Storage Replica Admin even log on the destination server show number of bytes copied and bytes remaining every 10 seconds. You can also use the Storage Replica performance counter on the destination showing **\Storage Replica Statistics\Total Bytes Received** for one or more replicated volumes. You can also query the replication group using Windows PowerShell. For instance,  this sample command gets the name of the groups on the destination  then queries one group named **Replication 2** every 10 seconds to show progress:
           
           ```
           Get-SRGroup
