Apply suggestions from code review

--- a/WindowsServerDocs/storage/storage-migration-service/faq.yml
+++ b/WindowsServerDocs/storage/storage-migration-service/faq.yml
@@ -207,5 +207,5 @@ sections:
           
 additionalContent: |
 
-  ## Additional References
+  ## Additional references
     - [Storage Migration Service overview](overview.md)
