--- a/WindowsServerDocs/storage/storage-replica/storage-replica-frequently-asked-questions.yml
+++ b/WindowsServerDocs/storage/storage-replica/storage-replica-frequently-asked-questions.yml
@@ -1,7 +1,7 @@
 ### YamlMime:FAQ
 metadata:
   description: "Learn more about"
-  title: Frequently Asked Questions about Storage Replica
+  title: Frequently asked questions about Storage Replica
   manager: siroy
   ms.author: nedpyle
   ms.topic: how-to
@@ -9,7 +9,7 @@ metadata:
   ms.date: 04/15/2020
   ms.assetid: 12bc8e11-d63c-4aef-8129-f92324b2bf1b
     
-title: Frequently Asked Questions about Storage Replica
+title: Frequently asked questions about Storage Replica
 summary: |
   >Applies to: Windows Server 2019, Windows Server 2016, Windows Server (Semi-Annual Channel)
   
@@ -24,19 +24,19 @@ sections:
         answer: |
           Yes. You can use the following scenarios with Azure:
           
-          1. Server-to-server replication inside Azure (synchronously or asynchronously between IaaS VMs in one or two datacenter fault domains, or asynchronously between two separate regions)
-          2. Server-to-server asynchronous replication between Azure and on-premises (using VPN or Azure ExpressRoute)
-          3. Cluster-to-cluster replication inside Azure (synchronously or asynchronously between IaaS VMs in one or two datacenter fault domains, or asynchronously between two separate regions)
-          4. Cluster-to-cluster asynchronous replication between Azure and on-premises (using VPN or Azure ExpressRoute)
+          - Server-to-server replication inside Azure (synchronously or asynchronously between IaaS VMs in one or two datacenter fault domains, or asynchronously between two separate regions)
+          - Server-to-server asynchronous replication between Azure and on-premises (using VPN or Azure ExpressRoute)
+          - Cluster-to-cluster replication inside Azure (synchronously or asynchronously between IaaS VMs in one or two datacenter fault domains, or asynchronously between two separate regions)
+          - Cluster-to-cluster asynchronous replication between Azure and on-premises (using VPN or Azure ExpressRoute)
           
           Further notes on guest clustering in Azure can be found at: [Deploying IaaS VM Guest Clusters in Microsoft Azure](https://techcommunity.microsoft.com/t5/Failover-Clustering/Deploying-IaaS-VM-Guest-Clusters-in-Microsoft-Azure/ba-p/372126).
           
           Important notes:
           
-          1. Azure doesn't support shared VHDX guest clustering, so Windows Failover Cluster virtual machines must use iSCSI targets for classic shared-storage persistent disk reservation clustering or Storage Spaces Direct.
-          2. There are Azure Resource Manager templates for Storage Spaces Direct-based Storage Replica clustering at [Create a Storage Spaces Direct  SOFS Clusters with Storage Replica for Disaster Recovery across Azure Regions](https://aka.ms/azure-storage-replica-cluster).
-          3. Cluster to cluster RPC communication in Azure (required by the cluster APIs for granting access between cluster) requires configuring network access for the CNO. You must allow TCP port 135 and the dynamic range above TCP port 49152. Reference [Building Windows Server Failover Cluster on Azure IAAS VM – Part 2 Network and Creation](/archive/blogs/askcore/building-windows-server-failover-cluster-on-azure-iaas-vm-part-2-network-and-creation).
-          4. It's possible to use two-node guest clusters, where each node is using loopback iSCSI for an asymmetric cluster replicated by Storage Replica. But this will likely have very poor performance and should be used only for very limited workloads or testing.
+          - Azure doesn't support shared VHDX guest clustering, so Windows Failover Cluster virtual machines must use iSCSI targets for classic shared-storage persistent disk reservation clustering or Storage Spaces Direct.
+          - There are Azure Resource Manager templates for Storage Spaces Direct-based Storage Replica clustering at [Create a Storage Spaces Direct  SOFS Clusters with Storage Replica for Disaster Recovery across Azure Regions](https://aka.ms/azure-storage-replica-cluster).
+          - Cluster to cluster RPC communication in Azure (required by the cluster APIs for granting access between cluster) requires configuring network access for the CNO. You must allow TCP port 135 and the dynamic range above TCP port 49152. Reference [Building Windows Server Failover Cluster on Azure IAAS VM – Part 2 Network and Creation](/archive/blogs/askcore/building-windows-server-failover-cluster-on-azure-iaas-vm-part-2-network-and-creation).
+          - It's possible to use two-node guest clusters, where each node is using loopback iSCSI for an asymmetric cluster replicated by Storage Replica. But this will likely have very poor performance and should be used only for very limited workloads or testing.
           
       - question: |
           How do I see the progress of replication during initial sync?
@@ -158,9 +158,9 @@ sections:
           
           You can also use seeded data volumes to reduce bandwidth usage and sometimes time, by ensuring that the destination volume has some subset of data from the primary then using the Seeded option in Failover Cluster Manager or `New-SRPartnership`. If the volume is mostly empty, using seeded sync may reduce time and bandwidth usage. There are multiple ways to seed data, with varying degrees of efficacy:
           
-          1. Previous replication - by replicating with normal initial sync locally between nodes containing the disks and volumes, removing replication, shipping the destination disks elsewhere, then adding replication with the seeded option. This is the most effective method as Storage Replica guaranteed a block-copy mirror and the only thing to replicate is delta blocks.
-          2. Restored snapshot or restored snapshot-based backup - by restoring a volume-based snapshot onto the destination volume, there should be minimal differences in the block layout. This is the next most effective method as blocks are likely to match thanks to volume snapshots being mirror images.
-          3. Copied files - by creating a new volume on the destination that has never been used before and performing a full robocopy /MIR tree copy of the data, there are likely to be block matches. Using Windows File Explorer or copying some portion of the tree will not create many block matches. Copying files manually is the least effective method of seeding.
+          - Previous replication - by replicating with normal initial sync locally between nodes containing the disks and volumes, removing replication, shipping the destination disks elsewhere, then adding replication with the seeded option. This is the most effective method as Storage Replica guaranteed a block-copy mirror and the only thing to replicate is delta blocks.
+          - Restored snapshot or restored snapshot-based backup - by restoring a volume-based snapshot onto the destination volume, there should be minimal differences in the block layout. This is the next most effective method as blocks are likely to match thanks to volume snapshots being mirror images.
+          - Copied files - by creating a new volume on the destination that has never been used before and performing a full robocopy /MIR tree copy of the data, there are likely to be block matches. Using Windows File Explorer or copying some portion of the tree will not create many block matches. Copying files manually is the least effective method of seeding.
           
       - question: |
           Can I delegate users to administer replication?
@@ -204,7 +204,7 @@ sections:
           - 5445 (iWARP SMB - only needed when using iWARP RDMA networking)
           - 5985 (WSManHTTP - Management protocol for WMI/CIM/PowerShell)
           
-          > ![NOTE]
+          > [!NOTE]
           > The Test-SRTopology cmdlet requires ICMPv4/ICMPv6, but not for replication or management.
           
       - question: |
@@ -212,8 +212,8 @@ sections:
         answer: |
           The optimal size of the log varies widely per environment and workload, and is determined by how much write IO your workload performs.
           
-          1. A larger or smaller log doesn't make you any faster or slower
-          2. A larger or smaller log doesn't have any bearing on a 10GB data volume versus a 10TB data volume, for instance
+          - A larger or smaller log doesn't make you any faster or slower
+          - A larger or smaller log doesn't have any bearing on a 10GB data volume versus a 10TB data volume, for instance
           
           A larger log simply collects and retains more write IOs before they are wrapped out. This allows an interruption in service between the source and destination computer – such as a network outage or the destination being offline - to go longer. If the log can hold 10 hours of writes, and the network goes down for 2 hours, when the network returns the source can simply play the delta of unsynced changes back to the destination very fast and you are protected again very quickly. If the log holds 10 hours and the outage is 2 days, the source now has to play back from a different log called the bitmap – and will likely be slower to get back into sync. Once in sync it returns to using the log.
           
@@ -268,7 +268,7 @@ sections:
           - Server2 source drive O: with source log drive N: replicating to Server1 destination drive O: with destination log drive N:
           
       - question: |
-          Related Topics
+          Related topics
         answer: |
           - [Storage Replica Overview](storage-replica-overview.md)
           - [Stretch Cluster Replication Using Shared Storage](stretch-cluster-replication-using-shared-storage.md)
@@ -277,7 +277,7 @@ sections:
           - [Storage Replica: Known Issues](storage-replica-known-issues.md)
           
       - question: |
-          See Also
+          See also
         answer: |
           - [Storage Overview](../storage.yml)
           - [Storage Spaces Direct](../storage-spaces/storage-spaces-direct-overview.md)
