--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -1,12 +1,12 @@
 ﻿### YamlMime:Hub
 
 title: Windows release health
-summary: "Official information on Windows 10 releases and servicing milestones, plus resources, tools, and news about known issues and safeguards to help you plan your next update.\r\nIf you are looking for the Windows 10 release information page, bookmark https://aka.ms/Windows/ReleaseInfo."
+summary: "Official information on Windows 10 releases and servicing milestones, plus resources, tools, and news about known issues and safeguards to help you plan your next update.\r\n Want the latest Windows release health updates? Follow @WindowsUpdate on Twitter."
 brand: windows
 
 metadata:
   title: Windows release health
-  description: Official information on Windows 10 releases and servicing milestones, plus resources, tools, and news about known issues and safeguards to help you plan your next update. \n If you are looking for the Windows 10 release information page, bookmark https://aka.ms/Windows/ReleaseInfo.
+  description: Official information on Windows 10 releases and servicing milestones, plus resources, tools, and news about known issues and safeguards to help you plan your next update. \n Want the latest Windows release health updates? Follow @WindowsUpdate on Twitter.
   services: windows
   ms.service: windows
   ms.topic: hub-page
@@ -22,12 +22,12 @@ highlightedContent:
     - title: "Windows 10 release information and servicing options"
       itemType: reference
       url: https://aka.ms/windows/releaseinfo
-    - title: "How to get Windows 10, version 20H2"
+    - title: "How to get Windows 10, version 21H1"
       itemType: whats-new
-      url: https://blogs.windows.com/windowsexperience/2020/10/20/how-to-get-the-windows-10-october-2020-update/
-    - title: "Explore the latest features for IT professionals"
+      url: https://aka.ms/how-to-get-21H1
+    - title: "IT tools for Windows 10, version 21H1"
       itemType: get-started
-      url: https://aka.ms/new-in-20H2
+      url: https://aka.ms/tools-for-21H1
     - title: "Windows update fundamentals: Windows as a service"
       itemType: overview
       url: https://docs.microsoft.com/windows/deployment/update/waas-overview
@@ -43,19 +43,36 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "Windows 10, version 21H1 now available"
+          url: https://docs.microsoft.com/windows/release-information/windows-message-center#1608
+          itemType: whats-new
         - text: "Take action: May 2021 security update available for all supported versions of Windows"
           url: https://support.microsoft.com/help/5003173
           itemType: whats-new
         - text: "Windows 10, version 1803 and other editions of Windows 10 have reached end of servicing"
           url: https://docs.microsoft.com/windows/release-information/windows-message-center#1601
           itemType: whats-new
-        - text: "Public preview of Microsoft Graph APIs to manage Windows updates "
-          url: https://techcommunity.microsoft.com/t5/windows-it-pro-blog/public-preview-of-microsoft-graph-apis-to-manage-windows-updates/ba-p/2302751
-          itemType: whats-new
 
       footerLink:
         url: https://docs.microsoft.com/windows/release-information/windows-message-center
         text: See more
+    - title: "Windows 10, version 21H1"
+      links:
+        - text: Known issues
+          url: https://docs.microsoft.com/windows/release-health/status-windows-10-21H1
+          itemType: concept
+        - text: Resolved issues
+          url: https://docs.microsoft.com/windows/release-health/resolved-issues-windows-10-21H1
+          itemType: how-to-guide
+        - text: "Release notes"
+          url: https://support.microsoft.com/topic/windows-10-update-history-1b6aac92-bf01-42b5-b158-f80c6d93eb11
+          itemType: deploy
+        - text: "How to get Windows 10, version 21H1"
+          url: https://aka.ms/how-to-get-21H1
+          itemType: whats-new
+        - text: "IT tools for Windows 10, version 21H1"
+          url: https://aka.ms/tools-for-21H1
+          itemType: whats-new
     - title: "Windows 10 and Windows Server, version 20H2"
       links:
         - text: Known issues
@@ -128,17 +145,6 @@ conceptualContent:
           itemType: how-to-guide
         - text: "Release notes"
           url: https://support.microsoft.com/en-us/topic/windows-10-update-history-0d8c2da6-3dba-66e4-2ef2-059192bf7869
-          itemType: deploy
-    - title: "Windows 10, version 1607 and Windows Server 2016"
-      links:
-        - text: Known issues
-          url: https://docs.microsoft.com/windows/release-health/status-windows-10-1607-and-windows-server-2016
-          itemType: concept
-        - text: Resolved issues
-          url: https://docs.microsoft.com/windows/release-health/resolved-issues-windows-10-1607-and-windows-server-2016
-          itemType: how-to-guide
-        - text: "Release notes"
-          url: https://support.microsoft.com/en-us/topic/windows-10-and-windows-server-2016-update-history-4acfbc84-a290-1b54-536a-1c0430e9f3fd
           itemType: deploy
 
     - title: Additional versions
