--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -13,7 +13,7 @@ metadata:
   author: DocsPreview
   ms.author: v-nishmi
   ms.date: 09/25/2020
-  ms.localizationpriority: medium
+  ms.localizationpriority: high
   featureFlags:
             -clicktale
            
@@ -28,9 +28,9 @@ highlightedContent:
     - title: "IT tools for Windows 10, version 21H1"
       itemType: get-started
       url: https://aka.ms/tools-for-21H1
-    - title: "Windows update fundamentals: Windows as a service"
-      itemType: overview
-      url: https://docs.microsoft.com/windows/deployment/update/waas-overview
+    - title: "Feedback wanted! Take our short survey."
+      itemType: architecture
+      url: https://aka.ms/WRH-survey
     - title: "How to plan for, prepare & deploy updates for Windows 10"
       itemType: learn
       url: https://docs.microsoft.com/learn/paths/m365-stay-current
