--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -43,14 +43,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "Out-of-band update to address an issue preventing installing or opening Xbox Game Pass games"
+          url: https://support.microsoft.com/help/5004476
+          itemType: whats-new
         - text: "Take action: June 2021 security update available for all supported versions of Windows"
           url: https://support.microsoft.com/help/5003637
           itemType: whats-new
         - text: "May 2021 Windows non-security preview \"C\" release is available for all supported versions"
           url: https://support.microsoft.com/help/5003214
-          itemType: whats-new
-        - text: "May 2021 Windows non-security preview \"C\" release is available for some versions for Windows 10"
-          url: https://support.microsoft.com/help/5003212
           itemType: whats-new
 
       footerLink:
@@ -135,16 +135,16 @@ conceptualContent:
         - text: "Release notes"
           url: https://support.microsoft.com/en-us/topic/windows-10-and-windows-server-2019-update-history-725fc2e1-4443-6831-a5ca-51ff5cbcb059
           itemType: deploy
-    - title: "Windows 10, version 1803"
+    - title: "Windows 10, version 1607 and Windows Server 2016"
       links:
         - text: Known issues
-          url: https://docs.microsoft.com/windows/release-health/status-windows-10-1803
+          url: https://docs.microsoft.com/windows/release-health/status-windows-10-1607-and-windows-server-2016
           itemType: concept
         - text: Resolved issues
-          url: https://docs.microsoft.com/windows/release-health/resolved-issues-windows-10-1803
+          url: https://docs.microsoft.com/windows/release-health/resolved-issues-windows-10-1607-and-windows-server-2016
           itemType: how-to-guide
         - text: "Release notes"
-          url: https://support.microsoft.com/en-us/topic/windows-10-update-history-0d8c2da6-3dba-66e4-2ef2-059192bf7869
+          url: https://support.microsoft.com/en-us/topic/windows-10-and-windows-server-2016-update-history-4acfbc84-a290-1b54-536a-1c0430e9f3fd
           itemType: deploy
 
     - title: Additional versions
