Apply pencil edits for blocking issues from PR review

--- a/WindowsServerDocs/manage/windows-admin-center/understand/faq.yml
+++ b/WindowsServerDocs/manage/windows-admin-center/understand/faq.yml
@@ -1,6 +1,6 @@
 ### YamlMime:FAQ
 metadata:
-  title: Windows Admin Center Frequently Asked Questions
+  title: Windows Admin Center frequently asked questions
   description: Get answers about Windows Admin Center (Project Honolulu)
   ms.topic: article
   author: nwashburn-ms
@@ -8,7 +8,7 @@ metadata:
   ms.localizationpriority: medium
   ms.date: 12/02/2019
     
-title: Windows Admin Center Frequently Asked Questions
+title: Windows Admin Center frequently asked questions
 summary: |
   > Applies to: Windows Admin Center, Windows Admin Center Preview
   
