Added what's new article

--- a/WindowsServerDocs/WindowsServer2022/index.yml
+++ b/WindowsServerDocs/WindowsServer2022/index.yml
@@ -17,4 +17,4 @@ highlightedContent:
   items:
     - title: What's new in Windows Server 2022?
       itemType: whats-new
-      url: ./whats new/whats-new-windows-server-2022.md
+      url: ./whats-new/whats-new-windows-server-2022.md
