--- a/WindowsServerDocs/WindowsServer2022/toc-old.yml
+++ b/WindowsServerDocs/WindowsServer2022/toc-old.yml
@@ -1,5 +1,6 @@
-- name: Media Services Documentation
-  href: ./index.yml  
+items:
+- name: Windows Server Documentation
+  href: index.yml  
 - name: Overview
   items:
   - name: What's new in Windows Server 2022
